--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -34,3 +34,21 @@ spec:
   - protocol: TCP
     port: 80 #service-port
     targetPort: 80 #target-port
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: app1
+spec:
+  ingressClassName: alb
+  rules:
+  - host: "app1.daws78s.fun" # ALB Rule
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: app1 # ALB Target group
+            port:
+              number: 80  
