--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -39,6 +39,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: app1
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
+    alb.ingress.kubernetes.io/group.name: joindevops
 spec:
   ingressClassName: alb
   rules:
@@ -51,4 +56,4 @@ spec:
           service:
             name: app1 # ALB Target group
             port:
-              number: 80  
+              number: 80
