--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -41,6 +41,7 @@ metadata:
   name: app1
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
+    kubernates.io/ingress.class: alb
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
     alb.ingress.kubernetes.io/group.name: joindevops
