--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -38,7 +38,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app1
+  name: ingress-wildcard-host
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     kubernates.io/ingress.class: alb
