--- a/app2/manifest.yaml
+++ b/app2/manifest.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: app2
-        image: joindevops/app2:1.0
+        image: yojana01/app2:1.0
 ---
 apiVersion: v1
 kind: Service
@@ -34,27 +34,27 @@ spec:
   - protocol: TCP
     port: 80 #service-port
     targetPort: 80 #target-port
-# ---
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: app2
-#   annotations:
-#     alb.ingress.kubernetes.io/scheme: internet-facing
-#     alb.ingress.kubernetes.io/target-type: ip
-#     alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
-#     # this annotation is useful to keep only ALB under joindevops group. if you don't give this it will create another ALB.
-#     alb.ingress.kubernetes.io/group.name: joindevops
-# spec:
-#   ingressClassName: alb
-#   rules:
-#   - host: "app2.daws78s.online" # ALB Rule
-#     http:
-#       paths:
-#       - pathType: Prefix
-#         path: "/"
-#         backend:
-#           service:
-#             name: app2 # ALB Target group
-#             port:
-#               number: 80
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: ingress-wildcard-host
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    kubernates.io/ingress.class: alb
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
+    alb.ingress.kubernetes.io/group.name: joindevops
+spec:
+  ingressClassName: alb
+  rules:
+  - host: "app2.daws78s.fun" # ALB Rule
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: app2 # ALB Target group
+            port:
+              number: 80
